tests/fixtures/errors/postprocess/variants/throw-non-error-at-import/postprocess.js
console.log("My debug message", 1337);
throw [null, "error"];
